(issue 60) added some documentation
