# project/views/upload.py
@@ -12,66 +12,20 @@ from project.models.image import Image
 
 import PIL.Image
 
-mod = Blueprint('upload',__name__)
-
-image_types = [
-    "image/jpeg",
-    "image/png"
-]
-
-text_types = [
-    "text/plain"
-]
+REQUEST_API = Blueprint('upload',__name__)
 
 
-def _filter_files(files):
-    for f in files:
-        if f.content_type in image_types or f.content_type in text_types:
-            for item in _filestorage_to_db_item(f):
-                yield item
 
+# @REQUEST_API.route('/', methods=['POST'])
+# def create_record():
+#     """
+#
+#     """
+#     data = User().load(request.json)
+#     name = data["name"]
+#     msg = create_user(name)
+#     if msg == "error":
+#         return jsonify({'error': 'User with that name already exists'}), 409
+#
+#     return jsonify({'message': 'User created successfully'}), 201
 
-def _text_to_annotations(text, name):
-    _list = []
-    for line in text.splitlines():
-        try:
-            nr, x, y, w, h = line.strip().split(" ")
-            nr = int(nr)
-            x = float(x)
-            y = float(y)
-            w = float(w)
-            h = float(h)
-            _list.append((Annotation(x_center=x, y_center=y, width=w, height=h, class_id=nr), name))
-        except Exception as e:
-            continue
-    return _list
-
-
-def _filestorage_to_db_item(f):
-    content = f.stream.read()
-    if f.content_type in text_types:  # text file
-        text = str(content, "utf-8")
-        name = secure_filename(f.filename).split(".")[0]
-        _list = _text_to_annotations(text, name)
-        f.stream.close()
-        return _list
-    else:  # image file
-        io_bytes = BytesIO(content)
-        img = PIL.Image.open(io_bytes)
-        f.stream.close()
-        name = secure_filename(f.filename).split(".")[0]
-        return (Image(image=content, width=img.size[0], height=img.size[1]), name),
-
-
-@mod.route('/upload', methods=["GET", "POST"])
-def upload():
-    form = UploadFileForm()
-    if form.validate_on_submit():
-        project_name = form.project.data
-        uploader = form.uploader.data
-        split = form.split.data
-        uploaded_files = request.files.getlist("files")
-        uploaded_files = [f for f in _filter_files(uploaded_files)]
-        error = upload_files(uploaded_files, project_name, uploader, split)
-        return render_template("success.html", error=error)
-    return render_template('upload.html', form=form)
